2013-02-17  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* dfp/math.h (FP_LLOGB0): Define if it is not already defined.
	(FP_LLOGBNAN): Likewise.
	* ieee754r/ilogbd32.c (ilogbd32): Add suport for implementation define
	returns for zero and NaN inputs. Also return FP_LLOGB0 and FP_LLOGBNAN
	for llogbd.
	* ieee754r/llogbd128.c (llogbd128): Define return for 0 and NaN
	inputs.
	* ieee754r/llogbd32.c (llogbd32): Likewise.
	* ieee754r/llogbd64.c (llogbd64): Likewise.
	* tests/test-illogb.c: Change return values for llobd for 0 and NaN
	inputs.

2013-02-17  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* ieee754r/logbd32.c (logb): Fix return for negative infinity.

2013-02-16  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* Makefile.in (glibc_headers): Remove legacy define no longer used.
	(glibc_builddir): Likewise.
	(.c.o): Remove unused glibc_headers and glibc_builddir variables.
	(.c.os): Likewise.
	(.S.os): Likewise.
	(.cpp.os): Likewise.

2013-02-16  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* Makefile.in (libdfp_cxx_tests): Add missing -DNOT_IN_libdfp.

2013-02-24  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/dfpu/issignalingd128.c (issignalingd128): Fix DCM
	constant to avoid detect zero as signaling NaNs.
	* sysdeps/powerpc/dfpu/issignalingd32.c (issignalingd32): Likewise.
	* sysdeps/powerpc/dfpu/issignalingd64.c (issingalingd64): Likewise.
	* tests/test-issignaling.c: Add tests for zero values.

2013-02-14  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* configure.ac (with_dfp): Add power8 cpu target.
	* configure: Regenerated.
	* sysdeps/powerpc/powerpc64/power8/fpu/Implies: Fix implie.

2013-02-14  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc32/power6/fpu/trunctdsd2.S
	(__dpd_trunctdsd2): Add hidden_def.
	* sysdeps/powerpc/powerpc64/power6/fpu/trunctdsd2.S: Update Copyright
	years.

2013-02-14  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
